@@ -20,6 +20,37 @@ class BaseQueryFactory(protocol.ClientFactory):
         elif version == jsonrpclib.VERSION_2:
             return jsonrpclib._v2Request(*args)
 
+    def parseResponse(self, contents):
+        if not self.deferred:
+            return
+        try:
+            # Convert the response from JSON-RPC to python.
+            result = jsonrpclib.loads(contents)
+            #response = jsonrpclib.loads(contents)
+            #result = response['result']
+            #error = response['error']
+            #if error:
+            #    self.deferred.errback(error)
+            if isinstance(result, list):
+                result = result[0]
+        except Exception, error:
+            self.deferred.errback(error)
+            self.deferred = None
+        else:
+            self.deferred.callback(result)
+            self.deferred = None
+
+    def clientConnectionFailed(self, _, reason):
+        if self.deferred is not None:
+            self.deferred.errback(reason)
+            self.deferred = None
+
+    clientConnectionLost = clientConnectionFailed
+
+    def badStatus(self, status, message):
+        self.deferred.errback(ValueError(status, message))
+        self.deferred = None
+
 
 class BaseProxy:
     """
