@@ -221,37 +221,8 @@ class QueryFactory(BaseQueryFactory):
     protocol = QueryProtocol
     data = ''
 
-    def parseResponse(self, contents):
-        if not self.deferred:
-            return
-        try:
-            # Convert the response from JSON-RPC to python.
-            result = jsonrpclib.loads(contents)
-            #response = jsonrpclib.loads(contents)
-            #result = response['result']
-            #error = response['error']
-            #if error:
-            #    self.deferred.errback(error)
-            if isinstance(result, list):
-                result = result[0]
-        except Exception, error:
-            self.deferred.errback(error)
-            self.deferred = None
-        else:
-            self.deferred.callback(result)
-            self.deferred = None
-
     def clientConnectionLost(self, _, reason):
         self.parseResponse(self.data)
-
-    def clientConnectionFailed(self, _, reason):
-        if self.deferred is not None:
-            self.deferred.errback(reason)
-            self.deferred = None
-
-    def badStatus(self, status, message):
-        self.deferred.errback(ValueError(status, message))
-        self.deferred = None
 
 
 class Proxy(BaseProxy):
